[gd_scene load_steps=3 format=3 uid="uid://vrysf0svs6gt"]

[ext_resource type="Script" path="res://Scenes/tech_tooltip.gd" id="1_rnl8p"]
[ext_resource type="Texture2D" uid="uid://dql2enx0sdd4c" path="res://Cards/CardTooltip/Asset 6.png" id="2_i7fml"]

[node name="TechTooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 380.0
offset_bottom = 225.0
script = ExtResource("1_rnl8p")

[node name="TooltipBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i7fml")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.0986176
offset_right = -0.0986328
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Community Infrastrcurtue Levy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "It is an important tool for local authorities to use to help them deliver the infrastructure needed to support development in their area."
